syntax = "proto3";

option go_package = "git.edenfarm.id/project-version3/erp-services/erp-protobuf/gen/proto/account_service";
option objc_class_prefix = "EOP";

package proto.account_service;

import "google/protobuf/timestamp.proto";

service AccountService {
	rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {}
    rpc GetUserDetail(GetUserDetailRequest) returns (GetUserDetailResponse) {}
    rpc GetUserEmailAuth(GetUserEmailAuthRequest) returns (GetUserEmailAuthResponse) {}
    rpc GetUserRoleByUserId(GetUserRoleByUserIdRequest) returns (GetUserRoleByUserIdResponse) {}
	rpc UpdateUserSalesAppToken(UpdateUserSalesAppTokenRequest) returns (GetUserDetailResponse) {}
	rpc GetUserBySalesAppLoginToken(GetUserBySalesAppLoginTokenRequest) returns (GetUserDetailResponse) {}
	rpc GetRoleDetail (GetRoleDetailRequest) returns (GetRoleDetailResponse) {}
	rpc UpdateUserEdnAppToken(UpdateUserEdnAppTokenRequest) returns (GetUserDetailResponse) {}
	rpc UpdateUserPurchaserAppToken(UpdateUserPurchaserAppTokenRequest) returns (GetUserDetailResponse) {}
	rpc GetUserByEdnAppLoginToken(GetUserByEdnAppLoginTokenRequest) returns (GetUserDetailResponse) {}
	rpc GetDivisionDetail(GetDivisionDetailRequest) returns (GetDivisionDetailResponse) {}
	rpc GetDivisionDefaultByCustomerType(GetDivisionDefaultByCustomerTypeRequest) returns (GetDivisionDefaultByCustomerTypeResponse) {}
}

message User {
	int64 id = 1;
	string email = 2;
	int64 region_id = 3;
	int64 parent_id = 4;
	int64 site_id = 5;
	int64 territory_id = 6;
	string employee_code = 7;
	string name = 8;
	string nickname = 9;
	string phone_number = 10;
	string password = 11;
	int32 status = 12;
	int32 timezone = 13; 
	google.protobuf.Timestamp created_at = 14;
	google.protobuf.Timestamp updated_at = 15;
	string main_role =16;
	string division = 17;
	int32 force_logout = 18;
	string salesapp_login_token = 19;
  	string salesapp_notif_token = 20;
	string site_access = 21;
	string site_id_gp = 22;
	string purchaserapp_login_token = 23;
  	string purchaserapp_notif_token = 24;
	string region_id_gp = 25;
}

message Role {
	int64 id = 1;
	string code = 2;
	string name = 3;
	int64 division_id = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	int32 status = 7;
	string note = 8;
}

message GetUserListRequest{
	int32 limit = 1;
    int32 offset = 2;
    int32 status = 3;
    string search = 4;
    string order_by = 5;
	int64 site_id = 6;
	int64 division_id = 7;
	int64 role_id = 8;
	string apps = 9;
	string site_id_gp = 10;
	repeated int64 arr_role_id = 11;
}

message GetUserListResponse{
	int32 code = 1;
    string message = 2;
	repeated User data = 3;
}

message GetUserDetailRequest{
  	int64 id = 1;
	string email = 2;
	int64 region_id = 3;
	int64 parent_id = 4;
	int64 site_id = 5;
	int64 territory_id = 6;
	string employee_code = 7;
}

message GetUserDetailResponse{
    int32 code = 1;
    string message = 2;
    User data = 3;
}

message UserRole {
	int64 id = 1;
	int64 user_id = 2;
	int64 role_id = 3;
	int32 main_role = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	int32 status = 7;
}

message GetUserRoleByUserIdRequest{
	int64 id = 1;
}
  
message GetUserRoleByUserIdResponse{
    int32 code = 1;
    string message = 2;
	repeated UserRole data = 3;
}

message GetUserEmailAuthRequest{
	string email = 1;
	string password = 2;
}

message GetUserEmailAuthResponse{
    int32 code = 1;
    string message = 2;
    User data = 3;
}

message UpdateUserSalesAppTokenRequest{
	int64 id = 1;
	int32 force_logout = 2;
	string salesapp_login_token = 3;
	string salesapp_notif_token = 4;
  }

  message GetUserBySalesAppLoginTokenRequest{
	string salesapp_login_token = 1;
  }

message GetRoleDetailRequest{
	int64 id = 1;
}
  
message GetRoleDetailResponse{
	int32 code = 1;
	string message = 2;
	Role data = 3;
}

message UpdateUserEdnAppTokenRequest{
	int64 id = 1;
	int32 force_logout = 2;
	string ednapp_login_token = 3;
  }

  message UpdateUserPurchaserAppTokenRequest{
	int64 id = 1;
	int32 force_logout = 2;
	string purchaserapp_notif_token = 3;
  }

message GetUserByEdnAppLoginTokenRequest{
	string ednapp_login_token = 1;
}

message Division {
	int64 id = 1;
	string code = 2;
	string name = 3;
	int32 status = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	string status_convert = 7;
	string note = 8;
}

message GetDivisionDetailRequest{
	int64 id = 1;
	string code = 2;
}
  
message GetDivisionDetailResponse{
	int32 code = 1;
	string message = 2;
	Division data = 3;
}

message GetDivisionDefaultByCustomerTypeRequest{
	string customer_type_id_gp = 1;
}

message GetDivisionDefaultByCustomerTypeResponse{
	int32 code = 1;
	string message = 2;
	Division data = 3;
}